fix: validate and format css for readability;

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -106,7 +106,7 @@ Height: 661px;
 
 .card__like_liked {
   background-image: url('../images/like-liked.svg');
-  background-repeat: no repeat;
+  background-repeat: no-repeat;
   width: 23px;
   width: 23px;
   height: 20px;
