--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -176,11 +176,10 @@
 }
 @media screen and (max-width: 320px) {
   .modal {
-    padding: auto 16px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
-  /* .modal{
-    padding: 0;
-  } */
+
   .modal__container {
     width: 300px;
     height: fit-content;
